<resources>
    <string name="app_name">Parent App</string>
    <string name="save">Save</string>
    <string name="its_head_tail">IT\'S %1$s!</string>
    <string name="three_dots">Wait for it…</string>
    <string name="dismiss">DISMISS</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss_flip_result_without_saving">Dismiss flip coin result without saving?</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="would_you_pick_head_or_tail">Would you pick head or tail?</string>
    <string name="hi_its_someone_turn_to_pick">Hi %1$s!</string>
    <string name="your_child_name">Your child name</string>
    <string name="add_a_new_child">Add a new child!</string>
    <string name="click_to_flip_the_coin_when_you_are_ready">Click to flip the coin when you are ready!</string>
    <string name="countdown_timer">Timer</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="history_of_coin_flips">History of Coin Flips</string>
    <string name="configure_my_children">My children</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="flip_coin_result_has_been_saved">Result of your coin flip has been saved!</string>
    <string name="clear_game_history">Clear Game History</string>
    <string name="clear_all_coin_flip_history">Clear all coin flip history?</string>
    <string name="ok">OK</string>
    <string name="picked_vs_result">Picked: %1$s | Result: %2$s</string>
    <string name="main_menu">Main Menu</string>
    <string name="no_games_played">No games played yet.</string>
    <string name="editing_your_child">Editing your child</string>
    <string name="delete">Delete</string>
    <string name="no_children_added_yet">No children added yet.</string>
    <string name="you_can_add_your_kids_by_clicking_the_button_below">You can add your kids by clicking the button below.</string>
    <string name="all_my_children">All my children</string>
    <string name="adding_your_new_kid">Adding your new kid</string>
    <string name="scandium">Scandium</string>
    <string name="flipping_coin">Flipping Coin</string>
    <string name="coin_flip_history">Coin Flip History</string>
    <string name="you_can_make_history_by_flipping_a_coin">You can make history by flipping a coin!</string>
    <string name="counting_down">Counting down…</string>
    <string name="textview">TextView</string>
    <string name="count_down_timer">Timer</string>
    <string name="choose_your_duration">Choose your duration:</string>
    <string name="minutes">Minutes</string>
    <string name="customize_your_duration_in_minutes">Customize your duration in minutes:</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_a_positive_integer_for_minutes">Please enter a positive integer for minutes.</string>
    <string name="cancelled">Cancelled</string>
    <string name="times_up">Times up!</string>
    <string name="click_on_this_message_to_return">Click on this message to return to that app screen and stop alarm sound.</string>
    <string name="are_you_sure_you_want_to_delete_this_child">Are you sure you want to delete this child?</string>
    <string name="cancel_all_changes">Cancel all changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_another_kid">Select another kid</string>
    <string name="about_us">About us</string>
    <string name="the_parent_app">The Parent App</string>
    <string name="the_parent_app_explained">
        The parent app is a utility app that helps parents handle kids\' everyday problems.\nOur app helps
        you to impose fairness between your kids by rotating turns to flip the coin. And don\'t worry,
        all coin flip history of your kids will be saved!\nWith our app, you can also use the timer to
        set a countdown time for your kids to calm down (or for yourself to have some peace!).\nThe
        app also maintain a task list that helps you keep track of which kid is assigned to the task.\nEnjoy the app!
    </string>

    <string name="authors">Authors</string>
    <string name="authors_listing">
        This app is created by team Scandium, our team includes:\nCheng Zhang (Oliver)\nNguyenAiVy Tran (Ivy)\nBen de Goutiere\nJunhang Wu (Nick)\n
        We are from Fall 2021 CMPT276: <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home</a>
    </string>

    <string name="resources">Resources</string>
    <string name="resources_links">
        Ice cream image:\n<a href="https://www.subpng.com/png-6ih42k/">https://www.subpng.com/png-6ih42k/</a>\n
        Question mark icon:\n<a href="https://www.flaticon.com/free-icons/question-mark">https://www.flaticon.com/free-icons/question-mark</a>\n
        Empty box image:\n<a href="https://www.flaticon.com/free-icon/open-box_869078">https://www.flaticon.com/free-icon/open-box_869078</a>\n
        Task list icon:\n<a href="https://www.pngall.com/task-png/download/68562">https://www.pngall.com/task-png/download/68562</a>\n
        Win icon:\n<a href="https://www.iconsdb.com/green-icons/ok-icon.html">https://www.iconsdb.com/green-icons/ok-icon.html</a>\n
        Lose list icon:\n<a href="https://www.iconsdb.com/red-icons/x-mark-3-icon.html">https://www.iconsdb.com/red-icons/x-mark-3-icon.html</a>
    </string>

    <string name="turn_of">Turn of: %1$s</string>
    <string name="all_my_tasks">All My Tasks</string>
    <string name="add_new_task">Add new task!</string>
    <string name="its_somebody_turn">%1$s\'s turn!</string>
    <string name="your_task_details">Your task details</string>
    <string name="my_tasks">My Tasks</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="adding_you_new_task">Adding you new task</string>
    <string name="your_task_name">Your task name</string>
    <string name="select_a_kid">Select a kid!</string>
    <string name="no_tasks_added_yet">No tasks added yet</string>
    <string name="you_can_add_tasks_by_clicking_the_button_below">You can add tasks by clicking the button below.</string>
    <string name="no_kids_assigned">No kids assigned.</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="task_is_now_assigned_to_somebody">Task is now assigned to %1$s</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="edit">Edit</string>
    <string name="view_coin_flip_history">View coin flip history</string>
    <string name="ok_capitalized">OK</string>
    <string name="historyOfSomeTask">History of %1$s</string>
    <string name="time_at_some_percent">Time @%1$d%%</string>
    <string name="time_at_100_percent">Time @100%</string>
    <string name="some_percent">%1$d%%</string>
    <string name="set_timer_speed">Set timer speed</string>
    <string name="you_have_some_breaths_left">You have %1$d breaths left!</string>
    <string name="lets_take_n_breaths_together">Let\'s take %1$d breaths together!</string>
    <string name="in_capitalized">IN</string>
    <string name="hold_button_and_breath_in">Hold button and breath in.</string>
    <string name="out_capitalized">OUT</string>
    <string name="release_button_and_breath_out">Release button and breathe out.</string>
    <string name="good_job">Good job!</string>
    <string name="done">Done!</string>
    <string name="breathe">Breathe</string>
    <string name="slowly_breathe_out">Slowly breathe out…</string>
</resources>