<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="370dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogHeadsTails_cardView_askHeadsTails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dialogHeadsTails_imageViewChildPhoto"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialogHeadsTails_textViewHiPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/hi_its_someone_turn_to_pick"
                android:textColor="@color/darkk_purple"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dialogHeadsTails_imageViewChildPhoto"
                app:layout_constraintTop_toTopOf="@+id/dialogHeadsTails_imageViewChildPhoto" />

            <TextView
                android:id="@+id/dialogHeadsTails_textViewWhatYouWantToPick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/would_you_pick_head_or_tail"
                android:textColor="@color/darkk_purple"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dialogHeadsTails_imageViewChildPhoto"
                app:layout_constraintStart_toEndOf="@+id/dialogHeadsTails_imageViewChildPhoto"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_textViewHiPicker" />

            <Button
                android:id="@+id/dialogHeadsTails_buttonTail"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:width="30dp"
                android:background="@drawable/rectangle_darkk_purple_small_corner"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/tail"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dialogHeadsTails_textViewWhatYouWantToPick"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_textViewWhatYouWantToPick" />

            <Button
                android:id="@+id/dialogHeadsTails_buttonHead"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_darkk_purple_small_corner"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/head"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dialogHeadsTails_buttonTail"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_textViewWhatYouWantToPick" />

            <Button
                android:id="@+id/dialogHeadsTails_buttonSelectAnotherKid"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_light_orange_small_corner"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/select_another_kid"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dialogHeadsTails_buttonTail"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_buttonTail" />

            <Button
                android:id="@+id/dialogHeadsTails_buttonViewCoinFlipHistory"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_coral_pink_small_corner"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="View coin flip history"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dialogHeadsTails_buttonSelectAnotherKid"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_buttonSelectAnotherKid" />

            <Button
                android:id="@+id/dialogHeadsTails_buttonCancel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_red_to_lighter_red"
                android:fontFamily="@font/zenkurenaido_regular"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogHeadsTails_buttonViewCoinFlipHistory" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>